--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 </div>
             </div>
         </div><!-- end of About -->
-        
-           <div class="clearfix"></div>
+
+        <div class="clearfix"></div>
 
         <div class="container-fluid" id="contact">
             <h1 class="text-center">Get in Touch</h1>
@@ -190,7 +190,7 @@
                             <button class="btn btn-lg">Send Your Email </button>
                         </form>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-12">
+                    <div class="col-md-3 col-sm-3 col-xs-12 address">
                         <h3>CONTACT DETAILS</h3>
                         <p><a href="#" class="text-danger">hello@brushed.com</a></p><br>
                         <p>(916) 375-2525</p><br>
@@ -200,8 +200,27 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><!-- end contact -->
 
+
+        <div class="clearfix"></div>
+
+        <div class="container-fluid" id="social">
+            <div class="container">
+                <div class="row">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
 
 
