--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 <div class="collapse navbar-collapse" id="navbar-collapse-3">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">HOME</a></li>
-                        <li><a href="#">OUR WORK</a></li>
-                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="#work">OUR WORK</a></li>
+                        <li><a href="#about">ABOUT US</a></li>
                         <li><a href="#">Services</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
                         <li><a href="#">SHORTCODES</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -89,7 +89,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-sm-3 work_type">
-                        <h3>TYPE OF WORK</h3>
+                        <h4>TYPE OF WORK</h4>
+                        <div class="my_work">
+                            <ul>
+                                <li><a href="#">All Projects</a></li>
+                                <li><a href="#">Design</a></li>
+                                <li><a href="#">Photography</a></li>
+                                <li><a href="#">Video</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="col-md-9 col-sm-9">
                         <div class="row">
@@ -208,7 +216,7 @@
         <div class="container-fluid" id="social">
             <div class="container">
                 <div class="row">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav social">
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -221,6 +229,12 @@
                 </div>
             </div>
         </div>
+
+        <div class="clearfix"></div>
+
+        <footer class="footer"> 
+            <p>&copy;2017 by <a href="https://github.com/coderrubel">coderrubel</a></p>
+        </footer>
 
 
 
